--- a/public/press-service/press-performance-assessments/index.html
+++ b/public/press-service/press-performance-assessments/index.html
@@ -2,7 +2,7 @@
 <html><head>
   <meta charset="utf-8">
   <title>Press performance assessments</title>
-  <link rel="canonical" href="https://project-7498139985589509590.web.app/press-service/press-performance-assessments/">
+  <link rel="canonical" href="https://plant-engineering.web.app/press-service/press-performance-assessments/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="description" content="Detailed look into your equipment &amp; processes allowing for process development and improvement..." />  <meta itemprop="name" content="Press performance assessments">
   <meta itemprop="description" content="Detailed look into your equipment &amp; processes allowing for process development and improvement...">
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Press performance assessments">
   <meta property="og:type" content="article">
   <meta property="og:image" content="press-performance-assessments-image-featured-image.png">
-  <meta property="og:url" content="https://project-7498139985589509590.web.app/press-service/press-performance-assessments/">
+  <meta property="og:url" content="https://plant-engineering.web.app/press-service/press-performance-assessments/">
   <meta property="og:description" content="Detailed look into your equipment &amp; processes allowing for process development and improvement...">
   <meta property="og:site_name" content="Press performance assessments">
   <meta property="article:published_time" content="2019-06-03 14:17:37 -0400 EDT">
