--- a/public/press-service/press-relocation/index.html
+++ b/public/press-service/press-relocation/index.html
@@ -2,7 +2,7 @@
 <html><head>
   <meta charset="utf-8">
   <title>Press Relocation Projects</title>
-  <link rel="canonical" href="https://project-7498139985589509590.web.app/press-service/press-relocation/">
+  <link rel="canonical" href="https://plant-engineering.web.app/press-service/press-relocation/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="description" content="A full service engineering firm with the experience and qualifications necessary for your next relocation project..." />  <meta itemprop="name" content="Press Relocation Projects">
   <meta itemprop="description" content="A full service engineering firm with the experience and qualifications necessary for your next relocation project...">
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Press Relocation Projects">
   <meta property="og:type" content="article">
   <meta property="og:image" content="press-relocation-image-featured-image.jpg">
-  <meta property="og:url" content="https://project-7498139985589509590.web.app/press-service/press-relocation/">
+  <meta property="og:url" content="https://plant-engineering.web.app/press-service/press-relocation/">
   <meta property="og:description" content="A full service engineering firm with the experience and qualifications necessary for your next relocation project...">
   <meta property="og:site_name" content="Press Relocation Projects">
   <meta property="article:published_time" content="2019-06-04 14:17:12 -0400 EDT">
