--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -2,7 +2,7 @@
 <html><head>
   <meta charset="utf-8">
   <title>Contact Plant Engineering Services</title>
-  <link rel="canonical" href="https://project-7498139985589509590.web.app/contact/">
+  <link rel="canonical" href="https://plant-engineering.web.app/contact/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="description" content="Contact Plant Engineering Services for any and all of your Plant / Manufaturing Facility Press needs; build custom, rebuild or relocate." />  <meta itemprop="name" content="Contact Plant Engineering Services">
   <meta itemprop="description" content="Contact Plant Engineering Services for any and all of your Plant / Manufaturing Facility Press needs; build custom, rebuild or relocate.">
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Contact Plant Engineering Services">
   <meta property="og:type" content="article">
   <meta property="og:image" content="">
-  <meta property="og:url" content="https://project-7498139985589509590.web.app/contact/">
+  <meta property="og:url" content="https://plant-engineering.web.app/contact/">
   <meta property="og:description" content="Contact Plant Engineering Services for any and all of your Plant / Manufaturing Facility Press needs; build custom, rebuild or relocate.">
   <meta property="og:site_name" content="Contact Plant Engineering Services">
   <meta property="article:published_time" content="2019-06-01 15:25:10 -0400 EDT">
