--- a/public/press-service/press-repair-and-upgrade/index.html
+++ b/public/press-service/press-repair-and-upgrade/index.html
@@ -2,7 +2,7 @@
 <html><head>
   <meta charset="utf-8">
   <title>Press Repair &amp; Upgrade</title>
-  <link rel="canonical" href="https://project-7498139985589509590.web.app/press-service/press-repair-and-upgrade/">
+  <link rel="canonical" href="https://plant-engineering.web.app/press-service/press-repair-and-upgrade/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="description" content="A full service engineering firm with the experience and expertise to repair or upgrade your press properly and timely..." />  <meta itemprop="name" content="Press Repair &amp; Upgrade">
   <meta itemprop="description" content="A full service engineering firm with the experience and expertise to repair or upgrade your press properly and timely...">
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Press Repair &amp; Upgrade">
   <meta property="og:type" content="article">
   <meta property="og:image" content="press-repair-and-upgrade-image-featured-image.jpg">
-  <meta property="og:url" content="https://project-7498139985589509590.web.app/press-service/press-repair-and-upgrade/">
+  <meta property="og:url" content="https://plant-engineering.web.app/press-service/press-repair-and-upgrade/">
   <meta property="og:description" content="A full service engineering firm with the experience and expertise to repair or upgrade your press properly and timely...">
   <meta property="og:site_name" content="Press Repair &amp; Upgrade">
   <meta property="article:published_time" content="2019-06-05 14:16:30 -0400 EDT">
