update contact page

--- a/public/press-service/press-repair-and-upgrade/index.html
+++ b/public/press-service/press-repair-and-upgrade/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html><head>
+<!doctype html>
+<html ⚡="" lang="en"><head>
   <meta charset="utf-8">
   <title>Press Repair &amp; Upgrade</title>
   <link rel="canonical" href="https://plant-engineering.web.app/press-service/press-repair-and-upgrade/">
