--- a/public/press-service/additional-services/index.html
+++ b/public/press-service/additional-services/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html><head>
+<!doctype html>
+<html ⚡="" lang="en"><head>
   <meta charset="utf-8">
   <title>Additional Press Services</title>
   <link rel="canonical" href="https://plant-engineering.web.app/press-service/additional-services/">
