--- a/public/press-service/press-performance-assessments/index.html
+++ b/public/press-service/press-performance-assessments/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html><head>
+<!doctype html>
+<html ⚡="" lang="en"><head>
   <meta charset="utf-8">
   <title>Press performance assessments</title>
   <link rel="canonical" href="https://plant-engineering.web.app/press-service/press-performance-assessments/">
