update home about us formatting

--- a/public/press-service/press-repair-and-upgrade/index.html
+++ b/public/press-service/press-repair-and-upgrade/index.html
@@ -307,7 +307,7 @@ blockquote {
 
 <p class="my2 ">We have a world class supplier base that provides us with experienced resources in almost any situation.  We rely on these key resources for assistance in areas of advanced mechanical design, large complex machining, heavy rigging, CMM measurement, laboratory analysis and other specific areas to insure we are providing our clients with the very best information, systems and designs.</p>
 
-<p class="my2 "><a href="/contact/#contact-form" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
+<p class="my2 "><a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
 <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a>
 <div class="h4 col-10 pb1 pt1">Share Page</div>
 <div class="ampstart-social-box col-10 pb1 pt1">
