--- a/public/press-service/additional-services/index.html
+++ b/public/press-service/additional-services/index.html
@@ -319,7 +319,7 @@ blockquote {
 
 <p class="my2 ">We are a full service product design firm specializing in the design of plastic products. Our engineers can work either with the molder or the products end user to develop a complete product concept. Multiple component products can include bonding and hardware specifications as well as prime or finish painting specifications. We can take your product from concept to a molded part as a turn key package. With the experience of our engineering staff we can insure manufacturability of the finished product.</p>
 
-<p class="my2 "><a href="/contact/#contact-form" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
+<p class="my2 "><a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
 <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a>
 <div class="h4 col-10 pb1 pt1">Share Page</div>
 <div class="ampstart-social-box col-10 pb1 pt1">
