--- a/public/press-service/press-performance-assessments/index.html
+++ b/public/press-service/press-performance-assessments/index.html
@@ -315,7 +315,7 @@ blockquote {
 
 <p class="my2 ">For the user with full time monitoring needs, PES offers these systems for sale. We offer everything from the basic PM-4 system to large in panel custom built systems for specific monitoring applications.</p>
 
-<p class="my2 "><a href="/contact/#contact-form" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
+<p class="my2 "><a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
 <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a>
 <div class="h4 col-10 pb1 pt1">Share Page</div>
 <div class="ampstart-social-box col-10 pb1 pt1">
