--- a/public/press-service/press-relocation/index.html
+++ b/public/press-service/press-relocation/index.html
@@ -339,7 +339,7 @@ blockquote {
 
 <p class="my2 ">We offer a full line of press relocation services that can be custom tailored to fit your needs. From complete turn-key relocation to just a project management role, we can make sure your press relocation, installation and startup go smooth. We also offer a full line of related services such as press pit design and construction, press pit cover design to insure the pit cover can withstand the load of molds, dies, as well as handling equipment. Our utility evaluation services help you confirm that your existing utilities can handle the extra load of another press or we can design the utility system for a new manufacturing operation. Because of our experience in relocating presses on a regular basis, we can help keep the project on time and within budget.</p>
 
-<p class="my2 "><a href="/contact/#contact-form" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
+<p class="my2 "><a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
 <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a>
 <div class="h4 col-10 pb1 pt1">Share Page</div>
 <div class="ampstart-social-box col-10 pb1 pt1">
