update bold and changes they requested in meeting

--- a/public/press-service/index.html
+++ b/public/press-service/index.html
@@ -196,6 +196,10 @@ blockquote {
 	color: #fff;
 }
 
+.red-font {
+	color: red;
+}
+
 </style></head><body>
 <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4 ">
     <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger md-hide lg-hide pr2  ">☰
@@ -264,18 +268,18 @@ blockquote {
                     <small><a href="/" class="ml2">Home</a> | <strong>Press Services</strong></small>
                 </header>
                 
-                <a href="/press-service/press-repair-and-upgrade/" class=" col-10 pb1 pt1 text-decoration-none">
+                <a href="/press-service/press-repair-and-upgrades/" class=" col-10 pb1 pt1 text-decoration-none">
                     <div class="flex " style="min-height: 175px">
                         <div class="mr2">
-                            <amp-img class="xs-hide sm-hide" src="../press-repair-and-upgrade-image-featured-image.jpg" width="350" height="200" alt="Press Repair &amp; Upgrade Image" title="Press Repair &amp; Upgrade">
+                            <amp-img class="xs-hide sm-hide" src="../press-repair-and-upgrades-card-350x200.jpg" width="350" height="200" alt="Press Repair &amp; Upgrades Image" title="Press Repair &amp; Upgrades">
                             </amp-img>
                         </div>
                         <div class="mr2 flex flex-column">
-                            <h2 class="h3 pb2">Press Repair &amp; Upgrade</h2>
+                            <h2 class="h3 pb2"><strong>Press Repair &amp; Upgrades</strong></h2>
                             <p class="pb2 ">A full service engineering firm with the experience and expertise to repair or upgrade your press properly and timely...</p>
                             <div>
                                 <button class="ampstart-btn ampstart-btn-primary">
-                                    View Press Repair &amp; Upgrade
+                                    View Press Repair &amp; Upgrades
                                 </button>
                             </div>
                         </div>
@@ -292,7 +296,7 @@ blockquote {
                             </amp-img>
                         </div>
                         <div class="mr2 flex flex-column">
-                            <h2 class="h3 pb2">Press Relocation Projects</h2>
+                            <h2 class="h3 pb2"><strong>Press Relocation Projects</strong></h2>
                             <p class="pb2 ">A full service engineering firm with the experience and qualifications necessary for your next relocation project...</p>
                             <div>
                                 <button class="ampstart-btn ampstart-btn-primary">
@@ -313,7 +317,7 @@ blockquote {
                             </amp-img>
                         </div>
                         <div class="mr2 flex flex-column">
-                            <h2 class="h3 pb2">Press Performance Assessments</h2>
+                            <h2 class="h3 pb2"><strong>Press Performance Assessments</strong></h2>
                             <p class="pb2 ">Detailed look into your equipment &amp; processes allowing for process development and improvement...</p>
                             <div>
                                 <button class="ampstart-btn ampstart-btn-primary">
@@ -330,15 +334,15 @@ blockquote {
                 <a href="/press-service/additional-services/" class=" col-10 pb1 pt1 text-decoration-none">
                     <div class="flex " style="min-height: 175px">
                         <div class="mr2">
-                            <amp-img class="xs-hide sm-hide" src="../additional-services-image-featured-image.png" width="350" height="200" alt="PES Additional Services Image" title="PES Additional Services">
+                            <amp-img class="xs-hide sm-hide" src="../additional-services-image-featured-image.png" width="350" height="200" alt="Our Additional Services Image" title="Our Additional Services">
                             </amp-img>
                         </div>
                         <div class="mr2 flex flex-column">
-                            <h2 class="h3 pb2">PES Additional Services</h2>
+                            <h2 class="h3 pb2"><strong>Our Additional Services</strong></h2>
                             <p class="pb2 ">Design and build of custom presses, automated handling and secondary operations, assessments, mold and die...</p>
                             <div>
                                 <button class="ampstart-btn ampstart-btn-primary">
-                                    View PES Additional Services
+                                    View Our Additional Services
                                 </button>
                             </div>
                         </div>
@@ -350,7 +354,7 @@ blockquote {
                 
                 <div class="pl2 pb1 pt1">
 
-<h2 id="list-of-our-services">List of our services</h2>
+<h2 id="list-of-our-services"><strong>List of Our Services</strong></h2>
 
 <ul>
 <li>Electrical, hydraulic and mechanical upgrades</li>
