--- a/public/press-service/press-relocation/index.html
+++ b/public/press-service/press-relocation/index.html
@@ -205,6 +205,10 @@ blockquote {
 	color: #fff;
 }
 
+.red-font {
+	color: red;
+}
+
 </style></head><body>
 <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4 ">
     <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger md-hide lg-hide pr2  ">☰
@@ -276,13 +280,13 @@ blockquote {
         <section class="mb2">
             <div class="my2">
 
-<h2 id="press-relocation">Press relocation</h2>
+<h2 id="press-relocation"><strong>Press Relocation</strong></h2>
 
 <blockquote>
 <p class="my2 ">A full service engineering firm with the experience and qualifications necessary for your next relocation project.</p>
 </blockquote>
 
-<h3 id="turn-key-equipment-relocation">Turn-key equipment relocation</h3>
+<h3 id="turn-key-equipment-relocation">Turn-Key Equipment Relocation</h3>
 
 <p class="my2 ">Large or complex relocation projects often require skills and experience that go beyond the typical experience of engineering departments.  Even when the skills are available, is it the best allocation of resources given the engineering workload of day to day responsibilities.   Our engineering and project management resources can work with your facility to understand the needs and goals of the relocation project and apply our experience and expertise to make sure your project is on time and successful.</p>
 
@@ -331,7 +335,7 @@ blockquote {
 
 <p class="my2 ">Our site supervisors and managers insure daily activities are completed in a safe, on-time, and effective manner.</p>
 
-<h4 id="typical-project-steps-include">Typical project steps include:</h4>
+<h4 id="typical-project-steps-include">Typical Project Steps Include:</h4>
 
 <ul>
 <li>Develop project scope and timeline</li>
@@ -348,7 +352,7 @@ blockquote {
 <li>Update system documentation as required</li>
 </ul>
 
-<h4 id="additional-steps-often-required-and-provided-include">Additional steps often required and provided include:</h4>
+<h4 id="additional-steps-often-required-and-provided-include">Additional Steps Often Required and Provided Include:</h4>
 
 <ul>
 <li>Updated or expanded plant utilities</li>
@@ -361,7 +365,7 @@ blockquote {
 <li>Overhead cranes</li>
 </ul>
 
-<h3 id="press-relocation-or-installation-our-specific-specialty">Press relocation or installation - our specific specialty</h3>
+<h3 id="press-relocation-or-installation-our-specific-specialty">Press Relocation or Installation - Our Specific Specialty</h3>
 
 <p class="my2 ">We offer a full line of press relocation services that can be custom tailored to fit your needs. From complete turn-key relocation to just a project management role, we can make sure your press relocation, installation and startup go smooth. We also offer a full line of related services such as press pit design and construction, press pit cover design to insure the pit cover can withstand the load of molds, dies, as well as handling equipment. Our utility evaluation services help you confirm that your existing utilities can handle the extra load of another press or we can design the utility system for a new manufacturing operation. Because of our experience in relocating presses on a regular basis, we can help keep the project on time and within budget.</p>
 
