--- a/public/press-service/press-performance-assessments/index.html
+++ b/public/press-service/press-performance-assessments/index.html
@@ -205,6 +205,10 @@ blockquote {
 	color: #fff;
 }
 
+.red-font {
+	color: red;
+}
+
 </style></head><body>
 <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4 ">
     <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger md-hide lg-hide pr2  ">☰
@@ -276,7 +280,7 @@ blockquote {
         <section class="mb2">
             <div class="my2">
 
-<h2 id="press-performance-assessments">Press performance assessments</h2>
+<h2 id="press-performance-assessments"><strong>Press Performance Assessments</strong></h2>
 
 <blockquote>
 <p class="my2 ">&ldquo;<em>a detailed look into your equipment and processes allowing for process development and improvement on a scale never seen before</em>&ldquo;</p>
@@ -321,7 +325,7 @@ blockquote {
   </amp-carousel>
 </div>
 
-<h3 id="hydraulic-press-and-process-monitoring">Hydraulic press and process monitoring</h3>
+<h3 id="hydraulic-press-and-process-monitoring">Hydraulic Press and Process Monitoring</h3>
 
 <p class="my2 ">Our mobile monitoring systems give you a detailed look into your equipment and processes allowing for process development and improvement on a scale never seen before.</p>
 
@@ -329,15 +333,15 @@ blockquote {
 
 <p class="my2 ">Many years of research and development has led to PES’s latest generation of press and process monitoring equipment. The PM-4 family of press/process monitors is specifically designed to provide real-time and historical monitoring of injection and compression molding equipment in a mobile monitoring package. The PM-4 sensor package operates independent of the press control providing an excellent calibration device for the molding process.</p>
 
-<h3 id="pes-hydraulic-press-monitoring-services">PES Hydraulic Press monitoring services</h3>
+<h3 id="pes-hydraulic-press-monitoring-services">PES Hydraulic Press Monitoring Services</h3>
 
 <p class="my2 ">PES offers our monitoring services to our clients on a pay per hour service. This service includes one of our skilled engineers, the PM-4 monitoring equipment as well as on site hookup and monitoring of your equipment and molding processes. During the monitoring activity, our engineer will point out problems the cycle graphs identify with the performance of your equipment, molds or process. Many times the problem can be corrected during the monitoring event. A full report is developed within one week of the monitoring activity outlining the items identified during the study and suggested corrective actions.</p>
 
-<h3 id="graphical-and-digital-representation-of-press-cycle-data">Graphical and digital representation of press cycle data</h3>
+<h3 id="graphical-and-digital-representation-of-press-cycle-data">Graphical and Digital Representation of Press Cycle Data</h3>
 
 <p class="my2 ">The system begins taking data when the mold is a few inches away from the fully closed position with a data acquisition of over 10,000 times per second, everything is captured. As the press completes the molding cycle and opens, the complete cycle graph is generated showing cycle information. the intuitive graphical user interface allows the user to zoom in on key areas of the cycle to identify problem areas. A reference line through all system input channels provides real position and pressure information throughout the cycle. The information can then be exported as a .JPG picture for insertion into presentations or corrective action reports (zoomed picture -right).</p>
 
-<h3 id="custom-pm-4-hydraulic-press-monitoring-systems-for-sale">Custom PM-4 Hydraulic Press Monitoring Systems for sale</h3>
+<h3 id="custom-pm-4-hydraulic-press-monitoring-systems-for-sale">Custom PM-4 Hydraulic Press Monitoring Systems for Sale</h3>
 
 <p class="my2 ">For the user with full time monitoring needs, PES offers these systems for sale. We offer everything from the basic PM-4 system to large in panel custom built systems for specific monitoring applications.</p>
 
